// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-headline> Component <span>-based Headlines do not overlap with neighboring <p> tags 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component <span>-based Headlines do not overlap with neighboring <p> tags 2`] = `
<span
  class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge"
  style=""
>
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component <span>-based Headlines horizontally align properly. 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge">
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component <span>-based Headlines horizontally align properly. 2`] = `
<span
  class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge"
  style=""
>
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: large, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: large, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: medium, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: medium, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: small, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: small, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xsmall, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xsmall, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxsmall, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxsmall, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxxlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxxlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component basic usage eyebrow 1`] = `
<p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
  this is an eyebrow
</p>
`;

exports[`<bolt-headline> Component basic usage headline 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  this is a headline
</h2>
`;

exports[`<bolt-headline> Component basic usage headline with attributes 1`] = `
<h2 foo
    bar="baz"
    class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge"
>
  this is a headline
</h2>
`;

exports[`<bolt-headline> Component basic usage lead 1`] = `
<p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--large">
  this is a lead
</p>
`;

exports[`<bolt-headline> Component basic usage subheadline 1`] = `
<p class="c-bolt-subheadline c-bolt-subheadline--regular c-bolt-subheadline--xlarge">
  this is an subheadline
</p>
`;

exports[`<bolt-headline> Component basic usage text 1`] = `
<p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
  this is text
</p>
`;

exports[`<bolt-headline> Component headline with associated link 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--link">
  <svg aria-hidden="true"
       enable-background="new 0 0 32 32"
       viewbox="0 0 32 32"
       xmlns="http://www.w3.org/2000/svg"
  >
    <path clip-rule="evenodd"
          d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
          fill="#151619"
          fill-rule="evenodd"
    >
    </path>
  </svg>
</h2>
`;

exports[`<bolt-headline> Component headline with icon 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  <span class="c-bolt-headline__text">
    this is a headline
    <span class="c-bolt-headline__icon c-bolt-headline__icon--position-after">
      <bolt-icon name="check"
                 aria-hidden="true"
      >
        <span class="c-bolt-icon c-bolt-icon--check">
          <svg class="c-bolt-icon__icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <path fill="var(--bolt-theme-icon, currentColor)"
                    d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
              >
              </path>
            </g>
          </svg>
        </span>
      </bolt-icon>
    </span>
  </span>
</h2>
`;

exports[`<bolt-headline> Component tag display: cite 1`] = `
<cite class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</cite>
`;

exports[`<bolt-headline> Component tag display: div 1`] = `
<div class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</div>
`;

exports[`<bolt-headline> Component tag display: h1 1`] = `
<h1 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h1>
`;

exports[`<bolt-headline> Component tag display: h2 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component tag display: h3 1`] = `
<h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h3>
`;

exports[`<bolt-headline> Component tag display: h4 1`] = `
<h4 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h4>
`;

exports[`<bolt-headline> Component tag display: h5 1`] = `
<h5 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h5>
`;

exports[`<bolt-headline> Component tag display: h6 1`] = `
<h6 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h6>
`;

exports[`<bolt-headline> Component tag display: p 1`] = `
<p class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</p>
`;

exports[`<bolt-headline> Component tag display: span 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</span>
`;

exports[`<bolt-headline> Component text alignment: center 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text alignment: left 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--left c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text alignment: right 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--right c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: capitalize 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--capitalize">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: lowercase 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--lowercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: uppercase 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--uppercase">
  Some text
</h2>
`;
